<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_test">

    <fragment
        android:id="@+id/nav_test"
        android:name="com.example.quizapp.ui.test.TestsFragment"
        android:label="@string/title_tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.quizapp.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.quizapp.ui.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>